--- a/assets/style/main_new.css
+++ b/assets/style/main_new.css
@@ -16,18 +16,23 @@
   --white-0: rgba(255, 255, 255, 0);
   --white-80: rgba(255, 255, 255, 0.08);
   --white-300: rgba(255, 255, 255, 0.3);
+  --white-600: rgba(255, 255, 255, 0.6);
   --gray-0: rgba(204, 204, 204, 0);
   --gray-80: rgba(204, 204, 204, 0.08);
   --gray-300: rgba(204, 204, 204, 0.3);
+  --gray-600: rgba(204, 204, 204, 0.6);
   --black-0: rgba(0, 0, 0, 0);
   --black-80: rgba(0, 0, 0, 0.08);
   --black-300: rgba(0, 0, 0, 0.3);
+  --black-600: rgba(0, 0, 0, 0.6);
   --primary-0: rgba(55, 67, 121, 0);
   --primary-80: rgba(55, 67, 121, 0.08);
   --primary-300: rgba(55, 67, 121, 0.3);
+  --primary-600: rgba(55, 67, 121, 0.6);
   --secondary-0: rgba(148, 0, 0, 0);
   --secondary-80: rgba(148, 0, 0, 0.08);
   --secondary-300: rgba(148, 0, 0, 0.3);
+  --secondary-600: rgba(148, 0, 0, 0.6);
   --unit-0: 0rem;
   --unit-1: 0.25rem;
   --unit-2: 0.5rem;
@@ -3955,14 +3960,26 @@ table td {
 
 pre {
   position: relative;
-  padding: var(--unit-2);
-  margin: var(--unit-3) 0;
 }
 pre code {
+  --scrollBar-w: 2px;
+  --scrollBar-bg: var(--primary-300);
   display: block;
   overflow: auto;
-  padding: var(--unit-3) 0;
   max-height: min(60dvh, 400px);
+}
+pre code::-webkit-scrollbar {
+  width: var(--scrollBar);
+}
+pre code::-webkit-scrollbar-track {
+  background: var(--white);
+}
+pre code::-webkit-scrollbar-thumb {
+  background: var(--primary-300);
+  border-radius: calc(var(--scrollBar) / 2);
+}
+pre code:hover {
+  --scrollBar-bg: var(--primary-600);
 }
 
 code {
@@ -3977,6 +3994,10 @@ code {
 code[class*=language-],
 pre[class*=language-] {
   font-size: 0.8rem;
+}
+
+pre[class*=language-] {
+  padding-top: var(--unit-4);
 }
 
 pre.language-output {
